--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>JS_module_1</title>
   </head>
-  <body></body>
-  <script src="./js/index.js"></script>
+  <body>
+    <h1>Hello JS</h1>
+    <script src="./js/index.js"></script>
+  </body>
 </html>
