--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Hello JS</h1>
-    <script src="./js/index.js"></script>
+    <!-- <script src="./js/index1.js"></script> -->
+    <script src="./js/index2.js"></script>
   </body>
 </html>
