--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Hello JS</h1>
     <!-- <script src="./js/index1.js"></script> -->
-    <script src="./js/index2.js"></script>
+    <!-- <script src="./js/index2.js"></script> -->
+    <script src="./js/index3.js"></script>
   </body>
 </html>
