--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Hello JS</h1>
     <!-- <script src="./js/index1.js"></script> -->
     <!-- <script src="./js/index2.js"></script> -->
-    <script src="./js/index3.js"></script>
+    <!-- <script src="./js/index3.js"></script> -->
+    <script src="./js/index4.js"></script>
   </body>
 </html>
