--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   </head>
   <body>
     <h1>Hello JS</h1>
+    <button id="html">html</button>
+    <button id="css">css</button>
     <!-- <script src="./js/index1.js"></script> -->
     <!-- <script src="./js/index2.js"></script> -->
     <!-- <script src="./js/index3.js"></script> -->
-    <script src="./js/index4.js"></script>
+    <!-- <script src="./js/index4.js"></script> -->
+    <script src="./js/index5.js"></script>
   </body>
 </html>
