--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- <script src="./js/index3.js"></script> -->
     <!-- <script src="./js/index4.js"></script> -->
     <!-- <script src="./js/index5.js"></script> -->
-    <script src="./js/index6.js"></script>
+    <!-- <script src="./js/index6.js"></script> -->
+    <script src="./js/index7.js"></script>
   </body>
 </html>
