--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <h1>Hello JS</h1>
     <button id="html">html</button>
     <button id="css">css</button>
+    <div data-widget-name="menu">Виберіть жанр</div>
     <!-- <script src="./js/index1.js"></script> -->
     <!-- <script src="./js/index2.js"></script> -->
     <!-- <script src="./js/index3.js"></script> -->
     <!-- <script src="./js/index4.js"></script> -->
     <!-- <script src="./js/index5.js"></script> -->
     <!-- <script src="./js/index6.js"></script> -->
-    <script src="./js/index7.js"></script>
+    <!-- <script src="./js/index7.js"></script> -->
+    <script src="./js/index8.js"></script>
   </body>
 </html>
