--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
     <button id="html">html</button>
     <button id="css">css</button>
     <div data-widget-name="menu">Виберіть жанр</div>
+    <button id="button-control">Click</button>
+    <div id="text">Text</div>
+    <button id="is-hidden">Click</button>
+    <div id="tree">
+      <ul class="tree-node" onclick="toggleNode(this)">
+        Root
+        <ul>
+          <li class="tree-node" onclick="toggleNode(this)">
+            Node 1
+            <ul>
+              <li>Node 1.1</li>
+              <li>Node 1.2</li>
+            </ul>
+          </li>
+          <li>Node 2</li>
+        </ul>
+      </ul>
+    </div>
     <!-- <script src="./js/index1.js"></script> -->
     <!-- <script src="./js/index2.js"></script> -->
     <!-- <script src="./js/index3.js"></script> -->
@@ -17,6 +35,7 @@
     <!-- <script src="./js/index5.js"></script> -->
     <!-- <script src="./js/index6.js"></script> -->
     <!-- <script src="./js/index7.js"></script> -->
-    <script src="./js/index8.js"></script>
+    <!-- <script src="./js/index8.js"></script> -->
+    <script src="./js/index9.js"></script>
   </body>
 </html>
